# CS153-Compilers

./: .gitignore  CMakeLists.txt  Chapter3cpp  Java.cpp  README  README.md  a.out  assumptions.txt  hello.pas  makefile  ouput.txt  output.txt  pascal_out.txt
Final Project/: simplc.sh
Final Project/docs/src/: Architecture Overview.md
Final Project/src/main/: CodeEmitter.java  Value.java  ValueBuilder.java
Final Project/tests/basic/: loop_errors.simpl  operator_errors.simpl
HW01/: CMakeLists.txt  README.md  widgets.pas
HW01/wci/frontend/java/: JavaParserTD.cpp
HW01/wci/frontend/java/tokens/: JavaCharToken.cpp  JavaNumberToken.cpp
HW02/: Java.cpp  Java.h  README  README.md  hello.pas  java_out.txt  makefile  pascal_out.txt
HW02/tests/: java_out.txt  pascal_out.txt
HW02/wci/: DataValue.h
HW02/wci/frontend/: FrontendFactory.h  Scanner.cpp  Token.cpp  Token.h
HW03/: README.md  makefile  when_compiled.txt  when_executed.txt  whenerrors_executed.txt
HW03/docs/: when_compiled.txt
HW03/tests/: when.txt  when_out.txt  whenerrors.txt  whenerrors_out.txt
HW03/wci/util/: ParseTreePrinter.h
HW04/: BaseTest.pas  README.md  complex_executed.txt  complexbuiltin_executed.txt  hilbert2.pas  output.txt  xref.pas
HW04/tests/: BaseTest.pas  ComplexBuiltIn.pas  ComplexType.pas  basetest_out.txt  complex_out.txt  complexbuiltin_out.txt  complextype_out.txt  when_out.txt
HW04/wci/backend/: Backend.cpp  Backend.h  BackendFactory.cpp  BackendFactory.h
HW04/wci/frontend/: Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Source.cpp  Source.h  Token.cpp  Token.h
HW04/wci/message/: Message.cpp  Message.h  MessageHandler.cpp
HW05/: CompilerVisitor.java  Pcl.g4  Pcl.java  README.md  sample.pas  sample.txt  simpL.g4  testArithmetic
HW05/.metadata/: version.ini
HW05/HelloExample/: CMakelists.txt  Hello.cpp  HelloRunner.java  antlr.bat  compile.bat  grun.bat
HW05/hw5/: .classpath  .project
HW05/simpL/: .project
HW05/src/: Calc.java  simpL.g4
HW05/test/: testDataType.txt
HW05/tests/: testArithmetic.txt  testFile1  testFile2  test_file1.txt  test_file2.txt  test_file3.txt
HW06/: README.md  antlr-gen.sh  build-all.sh  build-src.sh  build.sh  run.sh  simpl.sh  simplc.sh  simplr.sh  test.sh
HW06/docs/: Getting Started.md  Language Overview.md  README.md  Setup Guide.md  SimpL Overview.md
HW06/scripts/: build-src.sh  gen-antlr.sh  run-jasmin.sh  run-main.sh
HW06/src/: CompilerVisitor.java  EvalVisitor.java  README.md  SimpL.g4  SimpLCompiler.java  SimpLMain.java  c_run.bat  c_run.sh  run  simpL.g4  simpLBaseListener.java  simpLCompiler.java  simpLLexer.java  simpLListener.java  simpLMain.java  simpLParser.java  test_program  test_program.txt
HW06/src/exceptions/: InvalidSourceFileException.java  ParserException.java  SimpLException.java  SyntaxException.java
HW06/src/main/: Bool.java  CVisitor.java  CodeEmitter.java  ErrorMessage.java  ErrorMessages.java  ErrorMsg.java  Function.java  Number.java  SVisitor.java  Text.java  UnderlineListener.java  Value.java  ValueBuilder.java  Variable.java  cVisitor.java  sVisitor.java
HW06/src/utils/: FileUtils.java
HW06/tests/: arithmetic.txt  basic_compile.txt  basic_compile1.simpl  basic_compile2.simpl  declarations.txt  early_returns.txt  empty_blocks.txt  math_functions.txt  nested.txt  nested_assignments.simpl  test.simpl  test_file1.txt  test_file3.txt  test_program.simpl
HW06/tests/arithmetic/: addition1.txt  powers1.txt  simple_sum1.txt
HW06/tests/basic/: block_errors.simpl  declaration.simpl  declaration_errors.simpl  function_call.simpl  loop.simpl  operator.simpl  operator_errors.simpl
HW06/tests/basic_errors/: arithmetic.simpl  assignment.simpl  declarations.simpl  function_calls.simpl  function_definition.simpl  operator.simpl
HW06/tests/basic_tests/: arithmetic.simpl  assignment.simpl  declaration.simpl  declarations.simpl  function_definitions.simpl  functions.simpl
HW06/tests/comprehensive/: arithmetic.simpl  basic_compile1.simpl  early_returns.simpl  functionPass.simpl  function_call.simpl  global_state.simpl  hanoi.simpl  math_functions.simpl  nested_assignments.simpl  nested_declarations.simpl  newtons_method.simpl  operators.simpl  recursiveFunctions.simpl  sqrtTest.simpl  towers_of_hanoi.simpl  wrong_assign.simpl
HW06/tests/logic/: if_statement1.txt  if_statement2.txt  nested_test.txt  simple_logic1.txt  simple_logic3.txt
HW06/tests/subroutine1.txt/: simple_function1.txt
HW06/tests/text/: comment1.txt  extra_whitespace1.txt  text_manipulation1.txt
Materials/: README.md
Materials/C++ Code/CH02/: Pascal.cpp  README  makefile  makefile_dependencies.txt
Materials/C++ Code/CH03/: makefile  makefile_dependencies.txt
Materials/C++ Code/CH04/: Pascal.cpp  makefile  makefile_dependencies.txt
Materials/C++ Code/CH05/: Pascal.cpp  Pascal.h  makefile  makefile_dependencies.txt
Materials/C++ Code/CH06/: makefile  makefile_dependencies.txt
Materials/C++ Code/CH07/: makefile  makefile_dependencies.txt
Materials/C++ Code/CH08/: makefile  makefile_dependencies.txt
Materials/C++ Code/CH09/: makefile  makefile_dependencies.txt
Materials/C++ Code/CH10/: makefile  makefile_dependencies.txt
Materials/C++ Code/CH11/: Pascal.cpp  makefile  makefile_dependencies.txt
Materials/C++ Code/CH12/: Pascal.cpp  makefile  makefile_dependencies.txt
Materials/C++ Code/CH13/: Pascal.cpp  Pascal.h  makefile  makefile_dependencies.txt
Materials/C++ Code/CH16/: Pascal.cpp  makefile  makefile_dependencies.txt
Materials/C++ Code/EX01 - DFA Scanner/: SimpleDFAInput.txt  SimpleDFAScanner.cpp  SimpleDFAScanner.h
Materials/C++ Code/EX02 - ANTLR Warmup/: ExprMain.cpp
Materials/C++ Code/EX03 - ANTLR Extraction Listener/: ExtractInterfaceListener.cpp  ExtractInterfaceListener.h  ExtractInterfaceTool.cpp
Materials/C++ Code/EX04 - ANTLR Evaluation Visitor/: Calc.cpp  EvalVisitor.cpp  EvalVisitor.h
SimpL/: build.sh  simplc.sh  simplr.sh
SimpL/docs/src/: Contribution Guide.md
SimpL/src/: SimpLCompiler.java
wci/backend/: BackendFactory.h
wci/frontend/: FrontendFactory.cpp  Scanner.h
(+466 files in other folders)
