cmake_minimum_required(VERSION 3.8)
project(CS153Projects)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        .idea/dictionaries/jperm.xml
        .idea/CS153Projects.iml
        .idea/misc.xml
        .idea/modules.xml
        .idea/preferred-vcs.xml
        .idea/vcs.xml
        .idea/workspace.xml
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/CS153Projects.cbp
        cmake-build-debug/Makefile
        HW01/assign1.zip
        "HW01/HW01 spec - a pascal program.pdf"
        HW01/widgets.out
        HW01/widgets.pas
        HW02/wci/backend/compiler/CodeGenerator.cpp
        HW02/wci/backend/compiler/CodeGenerator.h
        HW02/wci/backend/interpreter/Executor.cpp
        HW02/wci/backend/interpreter/Executor.h
        HW02/wci/backend/Backend.cpp
        HW02/wci/backend/Backend.h
        HW02/wci/backend/BackendFactory.cpp
        HW02/wci/backend/BackendFactory.h
        HW02/wci/frontend/java/tokens/JavaCharToken.cpp
        HW02/wci/frontend/java/tokens/JavaCharToken.h
        HW02/wci/frontend/java/tokens/JavaErrorToken.cpp
        HW02/wci/frontend/java/tokens/JavaErrorToken.h
        HW02/wci/frontend/java/tokens/JavaNumberToken.cpp
        HW02/wci/frontend/java/tokens/JavaNumberToken.h
        HW02/wci/frontend/java/tokens/JavaSpecialSymbolToken.cpp
        HW02/wci/frontend/java/tokens/JavaSpecialSymbolToken.h
        HW02/wci/frontend/java/tokens/JavaStringToken.cpp
        HW02/wci/frontend/java/tokens/JavaStringToken.h
        HW02/wci/frontend/java/tokens/JavaWordToken.cpp
        HW02/wci/frontend/java/tokens/JavaWordToken.h
        HW02/wci/frontend/java/JavaError.cpp
        HW02/wci/frontend/java/JavaError.h
        HW02/wci/frontend/java/JavaErrorHandler.cpp
        HW02/wci/frontend/java/JavaErrorHandler.h
        HW02/wci/frontend/java/JavaParserTD.cpp
        HW02/wci/frontend/java/JavaParserTD.h
        HW02/wci/frontend/java/JavaScanner.cpp
        HW02/wci/frontend/java/JavaScanner.h
        HW02/wci/frontend/java/JavaToken.cpp
        HW02/wci/frontend/java/JavaToken.h
        HW02/wci/frontend/pascal/tokens/PascalErrorToken.cpp
        HW02/wci/frontend/pascal/tokens/PascalErrorToken.h
        HW02/wci/frontend/pascal/tokens/PascalNumberToken.cpp
        HW02/wci/frontend/pascal/tokens/PascalNumberToken.h
        HW02/wci/frontend/pascal/tokens/PascalSpecialSymbolToken.cpp
        HW02/wci/frontend/pascal/tokens/PascalSpecialSymbolToken.h
        HW02/wci/frontend/pascal/tokens/PascalStringToken.cpp
        HW02/wci/frontend/pascal/tokens/PascalStringToken.h
        HW02/wci/frontend/pascal/tokens/PascalWordToken.cpp
        HW02/wci/frontend/pascal/tokens/PascalWordToken.h
        HW02/wci/frontend/pascal/PascalError.cpp
        HW02/wci/frontend/pascal/PascalError.h
        HW02/wci/frontend/pascal/PascalErrorHandler.cpp
        HW02/wci/frontend/pascal/PascalErrorHandler.h
        HW02/wci/frontend/pascal/PascalParserTD.cpp
        HW02/wci/frontend/pascal/PascalParserTD.h
        HW02/wci/frontend/pascal/PascalScanner.cpp
        HW02/wci/frontend/pascal/PascalScanner.h
        HW02/wci/frontend/pascal/PascalToken.cpp
        HW02/wci/frontend/pascal/PascalToken.h
        HW02/wci/frontend/FrontendFactory.cpp
        HW02/wci/frontend/FrontendFactory.h
        HW02/wci/frontend/Parser.cpp
        HW02/wci/frontend/Parser.h
        HW02/wci/frontend/Scanner.cpp
        HW02/wci/frontend/Scanner.h
        HW02/wci/frontend/Source.cpp
        HW02/wci/frontend/Source.h
        HW02/wci/frontend/Token.cpp
        HW02/wci/frontend/Token.h
        HW02/wci/intermediate/ICode.h
        HW02/wci/intermediate/SymTab.h
        HW02/wci/message/Message.cpp
        HW02/wci/message/Message.h
        HW02/wci/message/MessageHandler.cpp
        HW02/wci/message/MessageHandler.h
        HW02/wci/message/MessageListener.h
        HW02/wci/message/MessageProducer.h
        HW02/wci/DataValue.h
        HW02/assign2.zip
        HW02/Chapter3cpp
        HW02/CMakeLists.txt
        "HW02/HW02 spec - java scanner.pdf"
        HW02/Java.cpp
        HW02/Java.h
        HW02/tests/javatest.in
        HW02/makefile
        HW02/README.md
        HW03/README.md
        HW04/README.md
        HW05/README.md
        .gitignore
        README.md)

add_executable(CS153Projects ${SOURCE_FILES})