cmake_minimum_required(VERSION 3.8)
project(CS153Projects)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        wci/backend/compiler/CodeGenerator.cpp
        wci/backend/compiler/CodeGenerator.h
        wci/backend/interpreter/Executor.cpp
        wci/backend/interpreter/Executor.h
        wci/backend/Backend.cpp
        wci/backend/Backend.h
        wci/backend/BackendFactory.cpp
        wci/backend/BackendFactory.h
        wci/frontend/java/tokens/JavaErrorToken.cpp
        wci/frontend/java/tokens/JavaErrorToken.h
        wci/frontend/java/tokens/JavaNumberToken.cpp
        wci/frontend/java/tokens/JavaNumberToken.h
        wci/frontend/java/tokens/JavaSpecialSymbolToken.cpp
        wci/frontend/java/tokens/JavaSpecialSymbolToken.h
        wci/frontend/java/tokens/JavaStringToken.cpp
        wci/frontend/java/tokens/JavaStringToken.h
        wci/frontend/java/tokens/JavaWordToken.cpp
        wci/frontend/java/tokens/JavaWordToken.h
        wci/frontend/java/JavaError.cpp
        wci/frontend/java/JavaError.h
        wci/frontend/java/JavaErrorHandler.cpp
        wci/frontend/java/JavaErrorHandler.h
        wci/frontend/java/JavaParserTD.cpp
        wci/frontend/java/JavaParserTD.h
        wci/frontend/java/JavaScanner.cpp
        wci/frontend/java/JavaScanner.h
        wci/frontend/java/JavaToken.cpp
        wci/frontend/java/JavaToken.h
        wci/frontend/pascal/tokens/PascalErrorToken.cpp
        wci/frontend/pascal/tokens/PascalErrorToken.h
        wci/frontend/pascal/tokens/PascalNumberToken.cpp
        wci/frontend/pascal/tokens/PascalNumberToken.h
        wci/frontend/pascal/tokens/PascalSpecialSymbolToken.cpp
        wci/frontend/pascal/tokens/PascalSpecialSymbolToken.h
        wci/frontend/pascal/tokens/PascalStringToken.cpp
        wci/frontend/pascal/tokens/PascalStringToken.h
        wci/frontend/pascal/tokens/PascalWordToken.cpp
        wci/frontend/pascal/tokens/PascalWordToken.h
        wci/frontend/pascal/PascalError.cpp
        wci/frontend/pascal/PascalError.h
        wci/frontend/pascal/PascalErrorHandler.cpp
        wci/frontend/pascal/PascalErrorHandler.h
        wci/frontend/pascal/PascalParserTD.cpp
        wci/frontend/pascal/PascalParserTD.h
        wci/frontend/pascal/PascalScanner.cpp
        wci/frontend/pascal/PascalScanner.h
        wci/frontend/pascal/PascalToken.cpp
        wci/frontend/pascal/PascalToken.h
        wci/frontend/FrontendFactory.cpp
        wci/frontend/FrontendFactory.h
        wci/frontend/Parser.cpp
        wci/frontend/Parser.h
        wci/frontend/Scanner.cpp
        wci/frontend/Scanner.h
        wci/frontend/Source.cpp
        wci/frontend/Source.h
        wci/frontend/Token.cpp
        wci/frontend/Token.h
        wci/intermediate/ICode.h
        wci/intermediate/SymTab.h
        wci/message/Message.cpp
        wci/message/Message.h
        wci/message/MessageHandler.cpp
        wci/message/MessageHandler.h
        wci/message/MessageListener.h
        wci/message/MessageProducer.h
        wci/DataValue.h
        Java.cpp
        Java.h)

add_executable(CS153Projects ${SOURCE_FILES})